Fix bug with socials icons overflow in footer

--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -63,7 +63,7 @@
 .page-footer__socials-list {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   width: 150px;
   margin: 0;
@@ -75,6 +75,14 @@
     margin-left: 0;
     margin-top: -5px;
     margin-right: -5px;
+  }
+}
+
+.page-footer__socials-item {
+  margin-right: 15px;
+
+  &:last-child {
+    margin-right: 0;
   }
 }
 
